--- a/webapp/sass/routes/_statistics.scss
+++ b/webapp/sass/routes/_statistics.scss
@@ -85,30 +85,28 @@
     }
 
     .team-statistics__header-row {
-        margin: 1.5em 0;
+        display: flex;
+        margin-bottom: 1.5em;
+        margin-top: 1.5em;
     }
 
     .team-statistics__header {
         display: inline-block;
-        margin-bottom: 0;
-        margin-right: 30px;
-        margin-top: 0;
+        flex: 1;
+        margin-right: 15px;
+        overflow: hidden;
         padding-bottom: .5em;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: calc(100% - 230px);
 
-        h3 {
+        > h3 {
             margin: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
 
     .team-statistics__team-filter {
         display: inline-block;
         width: 200px;
-
-        &__dropdown {
-            text-overflow: ellipsis;
-        }
     }
 }
